# colino

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  PRIVACY_POLICY.md  README.md  config.yaml  go.mod  go.sum  golden.ascii  pyproject.toml  requirements.txt  setup_env.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  demo.yml  go.yml  update-demo.yml
cmd/colino/: main.go
cmd/demo-server/: main.go
cmd/vhs-helper/: main.go
colino/: __init__.py  config.py  db.py  digest_manager.py  ingest_manager.py  main.py  oauth_proxy.py  scraper.py  summarize.py
colino/sources/: __init__.py  base.py  rss.py  youtube.py
demo/: banner.tape  demo.tape  golden.ascii  random.sh
golino/: README.md  go.mod  go.sum
internal/colinodb/: colinodb.go  schema.go
internal/config/: config.go  writer.go
internal/daemon/: daemon.go
internal/digest/: digest.go
internal/httpclient/: client.go  oauth.go
internal/ingest/: ingest.go  ingest_test.go  rss.go
internal/launchd/: launchd.go
internal/list/: list.go
internal/markdown/: markdown.go  markdown_test.go
internal/server/: server.go
internal/setup/: setup.go  setup_test.go
internal/test/: demoserver.go  ingest_test.go
internal/tui/: colors.go  detail.go  help.go  layout.go  search.go  table.go  tui.go  utils.go
internal/version/: version.go
internal/youtube/: oauth.go  subscriptions.go  transcript.go  url.go
mcp/: README.md  go.mod  go.sum
nix/: shell.nix
release/: SHA256SUMS
scripts/: run-demo.sh
src/: __init__.py  config.py  db.py  main.py  summarize.py
src/sources/: rss.py  youtube.py
tapes/: setup.ascii  setup.vhs  tui.ascii  tui.vhs
website/: docusaurus.config.ts  docusaurus.search.config.js  package-lock.json  package.json  sidebars.ts
(+47 files in other folders)
