[project]
name = "colino"
version = "0.1.0"
description = "Your personal news digest"
authors = [
    {name = "Umberto D'Ovidio",email = "umbertod@fastmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-api-python-client (>=2.179.0,<3.0.0)",
    "youtube-transcript-api (>=1.2.2,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "openai (>=1.102.0,<2.0.0)",
    "readability-lxml (>=0.8.4.1,<0.9.0.0)"
]

packages = [{include = "colino"}]

[tool.poetry.scripts]
colino = "colino.main:main"  # Assumes you have a main() function in main.py

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
